# autovectorization

./: CMakeLists.txt  README.md  build.sh  format.sh  show_disassembly.sh
src/: main.cpp
